--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,8 +108,9 @@
                 </div>
                 <span>Plaque Designer</span>
             </div>
-            <p class="tagline">Search any track, scrub to a position, and generate a laser‑ready SVG plaque with precise Spotify‑style layout.</p>
+            <p class="tagline">Design your laser‑ready Spotify style plaque. <a href="/shop.html" style="color:var(--accent);font-weight:600;">Shop materials & sizes →</a></p>
             <div class="grow"></div>
+            <a href="/shop.html" style="font-size:.75rem;font-weight:600;letter-spacing:.6px;text-transform:uppercase;color:var(--text-dim);padding:10px 14px;border:1px solid var(--border);border-radius:12px;text-decoration:none;">Shop</a>
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme" title="Toggle light / dark">
                 <svg id="themeIcon" viewBox="0 0 24 24" width="22" height="22" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="5"/><path d="M12 1v2m0 18v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2m18 0h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"/></svg>
             </button>
