--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,118 +3,104 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Custom Spotify Plaque – Laser Engraved Minimal Gift</title>
-    <meta name="description" content="Design, preview, and order a clean laser‑engraved Spotify style song plaque in seconds." />
-    <meta name="keywords" content="spotify plaque, custom music plaque, laser engraved gift, song acrylic" />
-    <meta name="theme-color" content="#ffffff" />
+    <title>Spotify Style Plaque – Design & Order</title>
+    <meta name="description" content="Design a precision laser‑engraved Spotify style plaque. Live SVG preview, instant download, easy order." />
+    <meta name="theme-color" content="#0b1520" />
     <meta name="color-scheme" content="light" />
     <link rel="preconnect" href="https://api.spotify.com" crossorigin>
     <link rel="preconnect" href="https://i.scdn.co" crossorigin>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Crect rx='14' width='64' height='64' fill='%234da8ff'/%3E%3Cpath fill='%2308324f' d='M24 15.5c0-.8.6-1.4 1.4-1.4h13.2c.8 0 1.4.6 1.4 1.4v27.2c0 1-.9 1.6-1.8 1.1L32 37.2l-6.2 4.6c-.9.5-1.8-.1-1.8-1.1V15.5Z'/%3E%3C/svg%3E" />
-    <meta property="og:title" content="Custom Spotify Plaque" />
-    <meta property="og:description" content="Turn a track & moment into a minimal laser‑engraved plaque." />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Crect width='64' height='64' rx='14' fill='%230f6ad7'/%3E%3Cpath fill='%23fff' d='M24 15.5c0-.8.6-1.4 1.4-1.4h13.2c.8 0 1.4.6 1.4 1.4v27.2c0 1-.9 1.6-1.8 1.1L32 37.2l-6.2 4.6c-.9.5-1.8-.1-1.8-1.1V15.5Z'/%3E%3C/svg%3E" />
+    <meta property="og:title" content="Custom Spotify Style Plaque" />
+    <meta property="og:description" content="Generate a laser‑ready SVG & order your plaque." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-placeholder.png" />
-    <meta property="og:url" content="https://your-domain.example" />
-    <meta name="twitter:card" content="summary_large_image" />
     <script>document.documentElement.classList.remove('no-js');</script>
 </head>
 <body>
-        <header>
-            <div class="site-bar">
-                <div class="site-left">
-                    <a class="logo" href="#" aria-label="Custom Spotify Plaque home">
-                        <div class="logo-badge" aria-hidden="true"><svg viewBox="0 0 24 24" role="img" aria-label="Logo"><path d="M8 5.5c0-.5.4-.9.9-.9h6.2c.5 0 .9.4.9.9v12.9a.9.9 0 0 1-1.4.8l-3.2-2.1-3.2 2.1a.9.9 0 0 1-1.4-.8V5.5Z"/></svg></div>
-                        <span>Custom Spotify Plaque</span>
-                    </a>
+    <div class="app-shell">
+        <header class="topbar">
+            <a href="#" class="brand" aria-label="Home">
+                <span class="brand-icon" aria-hidden="true"><svg viewBox="0 0 24 24" width="20" height="20"><path d="M8 5.5c0-.5.4-.9.9-.9h6.2c.5 0 .9.4.9.9v12.9a.9.9 0 0 1-1.4.8l-3.2-2.1-3.2 2.1a.9.9 0 0 1-1.4-.8V5.5Z" fill="currentColor"/></svg></span>
+                <span class="brand-name">Plaque Designer</span>
+            </a>
+            <nav class="main-nav" aria-label="Primary">
+                <button class="nav-btn" id="orderOpenBtn" disabled>Order</button>
+                <button class="nav-btn" id="downloadBtn" disabled data-loading-text="Preparing…">Download SVG</button>
+                <span class="build-pill" id="buildInfo" aria-label="Build info"></span>
+            </nav>
+        </header>
+        <main class="workspace" aria-label="Designer workspace">
+            <section class="panel" aria-labelledby="panelTitle">
+                <h1 id="panelTitle" class="panel-title">Design Your Plaque</h1>
+                <p class="intro">Type a song + artist, scrub to the moment you want displayed, then preview the exact engraving layout (<strong>black = engrave</strong>, <strong>red = cut outline</strong>).</p>
+                <div class="field">
+                    <label for="songInput">Track Search</label>
+                    <input id="songInput" type="text" placeholder="Example: Nineties - BØRNS" autocomplete="off" spellcheck="false" />
                 </div>
-                <nav aria-label="Primary" class="site-nav">
-                    <a href="#designerCard" class="nav-link">Designer</a>
-                    <a href="#order" class="nav-link">Order</a>
-                    <a href="#benefitsHeading" class="nav-link">Details</a>
-                </nav>
-            </div>
-        <div class="hero">
-            <div>
-                <h1 class="headline">Your song. Your moment. Minimal laser plaque.</h1>
-                <p class="lead">Search any track, lock a lyric moment, instantly preview the engraving layout, then order a precision‑cut acrylic plaque. Clean. Durable. Gift‑ready.</p>
-                <div class="pill-row">
-                    <div class="pill">Fast Turnaround</div>
-                        <div class="pill">Laser Engraved</div>
-                        <div class="pill">Student Friendly</div>
-                        <div class="pill">Gift Ready</div>
+                <div class="field">
+                    <label for="progressBar">Moment (drag or arrow keys)</label>
+                    <div class="slider-shell" id="progressBar" role="slider" aria-label="Track position" aria-valuemin="0" aria-valuemax="0" aria-valuenow="0" tabindex="0">
+                        <div class="progress-track"></div>
+                        <div class="progress-fill" id="progressFill"></div>
+                        <div class="progress-knob" id="progressKnob"></div>
+                    </div>
+                    <div class="time-row"><span id="currentTime">0:00</span><span id="totalTime">--:--</span></div>
+                    <input type="hidden" id="progressTime" value="0:00" />
                 </div>
-                <div class="card" aria-labelledby="designerTitle" id="designerCard">
-                    <h2 id="designerTitle" class="eyebrow">Design Preview</h2>
-                    <div>
-                        <label for="songInput">Track (title + artist)</label>
-                        <input id="songInput" type="text" placeholder="Example: Nineties - BØRNS" autocomplete="off" spellcheck="false" />
-                    </div>
-                    <div class="progress-wrap">
-                        <label for="progressBar">Moment (scrub to capture)</label>
-                        <div class="slider-shell" id="progressBar" role="slider" aria-label="Track position" aria-valuemin="0" aria-valuenow="0" aria-valuemax="0" tabindex="0">
-                            <div class="progress-track"></div>
-                            <div class="progress-fill" id="progressFill"></div>
-                            <div class="progress-knob" id="progressKnob"></div>
-                        </div>
-                        <div class="time-row"><span id="currentTime">0:00</span><span id="totalTime">--:--</span></div>
-                        <input type="hidden" id="progressTime" value="0:00" />
-                    </div>
-                    <div class="btn-row">
-                        <button class="btn" id="previewBtn" data-loading-text="Searching…">Preview Plaque</button>
-                        <button class="btn secondary" id="downloadBtn" disabled data-loading-text="Preparing…">Download SVG</button>
-                    </div>
-                    <div class="status" id="statusBox" aria-live="polite" role="status">Idle. Search a track to start.</div>
-                    <div class="meta-line" id="metaLine"></div>
+                <div class="actions">
+                    <button class="btn primary" id="previewBtn" data-loading-text="Searching…">Preview</button>
                 </div>
-            </div>
-            <div class="preview-stage" id="previewStage">
-                <div class="placeholder">No preview yet</div>
-            </div>
-        </div>
-    </header>
+                <div class="status" id="statusBox" aria-live="polite" role="status">Idle. Enter a track.</div>
+                <div class="meta-line" id="metaLine"></div>
+                <ul class="features" aria-label="Highlights">
+                    <li>True laser spacing</li>
+                    <li>Instant SVG output</li>
+                    <li>Order-ready layout</li>
+                </ul>
+            </section>
+            <section class="preview-area" aria-label="Live preview">
+                <div class="preview-stage" id="previewStage">
+                    <div class="placeholder">No preview yet</div>
+                </div>
+            </section>
+        </main>
+        <footer class="site-foot">&copy; <span id="year"></span> Spotify Style Plaque • Not affiliated with Spotify.</footer>
+    </div>
 
-        <section class="split" aria-label="Order" id="order">
-        <div class="order-card">
-            <h2 class="eyebrow" id="orderHeading">Order Your Plaque</h2>
-            <p class="body-sm" aria-describedby="orderHeading">One standard size plaque. We engrave exactly what you preview (album art outline only). Provide your details to place a production order.</p>
-            <div>
-                <label for="custName">Name</label>
-                <input id="custName" type="text" placeholder="Your name" autocomplete="name" required />
-            </div>
-            <div>
-                <label for="custEmail">Email</label>
-                <input id="custEmail" type="email" placeholder="you@school.edu" autocomplete="email" required />
-            </div>
-            <div>
-                <label for="custNotes">Notes (optional)</label>
-                <input id="custNotes" type="text" placeholder="Any special instructions" />
-            </div>
-            <div class="order-bar">
-                <div class="order-total">$24.99 <span class="badge-sub">Intro Price</span></div>
-                <button class="btn" id="orderBtn" disabled data-loading-text="Submitting…">Place Order</button>
-            </div>
-            <div class="status" id="orderStatus" style="min-height:42px;" role="status" aria-live="polite">Awaiting preview…</div>
+    <!-- Order Drawer -->
+    <div class="drawer-overlay" id="drawerOverlay" hidden></div>
+    <aside class="drawer" id="orderDrawer" aria-labelledby="orderTitle" aria-modal="true" role="dialog" hidden>
+        <div class="drawer-head">
+            <h2 id="orderTitle">Order Plaque</h2>
+            <button class="icon-btn" id="orderCloseBtn" aria-label="Close order panel">✕</button>
         </div>
-        <div class="card benefits" style="gap:20px;">
-            <h2 class="eyebrow" id="benefitsHeading">What You Get</h2>
+        <p class="drawer-intro">We engrave exactly what you preview (album art rectangle only). Provide your details to place an order.</p>
+        <div class="drawer-fields">
+            <label for="custName">Name</label>
+            <input id="custName" type="text" placeholder="Your name" autocomplete="name" required />
+            <label for="custEmail">Email</label>
+            <input id="custEmail" type="email" placeholder="you@school.edu" autocomplete="email" required />
+            <label for="custNotes">Notes (optional)</label>
+            <input id="custNotes" type="text" placeholder="Any special instructions" />
+        </div>
+        <div class="drawer-total">$24.99 <span class="tag">Intro</span></div>
+        <div class="drawer-actions">
+            <button class="btn primary" id="orderBtn" disabled data-loading-text="Submitting…">Place Order</button>
+        </div>
+        <div class="status slim" id="orderStatus" aria-live="polite" role="status">Awaiting preview…</div>
+        <div class="drawer-more">
+            <h3 class="eyebrow" id="benefitsHeading">Includes</h3>
             <ul class="benefits-list" aria-labelledby="benefitsHeading">
-                <li>Crisp laser engraving (all black fill) + precise red cut outline</li>
-                <li>Album art placeholder rectangle only (no raster image)</li>
-                <li>Durable acrylic – easy to mount or display</li>
-                <li>Turnaround typically 3–5 business days</li>
-                <li>Designed for college / dorm aesthetics</li>
+                <li>Black engraving + red cut outline</li>
+                <li>Durable clear acrylic</li>
+                <li>3–5 day typical turnaround</li>
+                <li>Gift‑ready protective wrap</li>
             </ul>
-            <div class="legal">Not affiliated with Spotify. For personal gifting & decor.</div>
+            <div class="legal">Personal use gift item. Not affiliated with Spotify.</div>
         </div>
-    </section>
+    </aside>
 
-        <footer>
-            &copy; <span id="year"></span> Custom Spotify Plaque • Red = cut • Black = engrave • <span id="buildInfo" aria-label="Build info"></span>
-        </footer>
-        <div class="toast-container" id="toastContainer" aria-live="polite" aria-atomic="true"></div>
-
+    <div class="toast-container" id="toastContainer" aria-live="polite" aria-atomic="true"></div>
     <script src="app.js" defer></script>
 </body>
 </html>
