--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
             <h2 id="designHeading" class="visually-hidden">Design</h2>
             <label for="songInput" class="lbl">Track (title + artist)</label>
             <input id="songInput" type="text" placeholder="Example: Nineties - BØRNS" autocomplete="off" spellcheck="false" />
+            <div class="hint" id="helpHint">Tip: You can paste a full Spotify track URL like https://open.spotify.com/track/4RVwu0g32PAqgUiJoXsdF8 for reliable results.</div>
             <label for="progressBar" class="lbl space-top">Moment</label>
             <div class="slider-shell" id="progressBar" role="slider" aria-label="Track position" aria-valuemin="0" aria-valuemax="0" aria-valuenow="0" tabindex="0">
                 <div class="progress-track"></div>
