--- a/frontend/index.html
+++ b/frontend/index.html
@@ -373,7 +373,7 @@
         </div>
     </footer>
 
-    <div id="admin-modal" style="display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 100; display: flex; align-items: center; justify-content: center;">
+        <div id="admin-modal" style="display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 100; align-items: center; justify-content: center;">
         <div class="panel" style="width: 320px;">
             <h2 class="panel-title">Admin Access</h2>
             <div class="field">
