--- a/frontend/index.html
+++ b/frontend/index.html
@@ -198,15 +198,7 @@
             padding: 1rem;
             transition: background-color 0.3s;
         }
-        .preview-stage svg {
-            background-image:
-                linear-gradient(45deg, #f0f0f0 25%, transparent 25%),
-                linear-gradient(-45deg, #f0f0f0 25%, transparent 25%),
-                linear-gradient(45deg, transparent 75%, #f0f0f0 75%),
-                linear-gradient(-45deg, transparent 75%, #f0f0f0 75%);
-            background-size: 20px 20px;
-            background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
-        }
+        .preview-stage svg { max-width: 100%; height: auto; }
         .placeholder { font-size: 0.9rem; color: var(--slate-500); }
         .skeleton { width: 100%; height: 300px; background: var(--slate-200); border-radius: var(--radius-lg); animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite; }
         @keyframes pulse { 0%, 100% { opacity: 1; } 50% { opacity: .5; } }
