--- a/frontend/index.html
+++ b/frontend/index.html
@@ -296,11 +296,11 @@
                     <h2 class="panel-title">2. Live Preview</h2>
                     <div style="display: flex; flex-direction: column; gap: 2rem; align-items: center;">
                         <div class="preview-size-label" style="font-weight:600; color:var(--slate-700); margin-bottom:0.5rem;">Large Plaque (Sheet Size)</div>
-                        <div class="preview-stage plaque-large" style="width: 794px; height: 1123px; max-width: 100%; aspect-ratio: 794/1123; box-shadow: var(--shadow-lg);">
+                        <div class="preview-stage plaque-large" id="previewStageLarge" style="width: 794px; height: 1123px; max-width: 100%; aspect-ratio: 794/1123; box-shadow: var(--shadow-lg);">
                             <div class="placeholder">Large plaque preview will appear here</div>
                         </div>
                         <div class="preview-size-label" style="font-weight:600; color:var(--slate-700); margin:1.5rem 0 0.5rem;">Small Plaque (Phone Size)</div>
-                        <div class="preview-stage plaque-small" style="width: 360px; height: 720px; max-width: 100%; aspect-ratio: 360/720; box-shadow: var(--shadow-lg);">
+                        <div class="preview-stage plaque-small" id="previewStageSmall" style="width: 360px; height: 720px; max-width: 100%; aspect-ratio: 360/720; box-shadow: var(--shadow-lg);">
                             <div class="placeholder">Small plaque preview will appear here</div>
                         </div>
                     </div>
