--- a/frontend/index.html
+++ b/frontend/index.html
@@ -333,7 +333,7 @@
         </div>
     </footer>
 
-        <div id="size-modal" style="display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 100; display: flex; align-items: center; justify-content: center;">
+        <div id="size-modal" style="display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 100; align-items: center; justify-content: center;">
             <div class="panel" style="width: 400px;">
                 <h2 class="panel-title">Select Plaque Size</h2>
                 <div style="display: flex; flex-direction: column; gap: 1rem;">
