Add corner score marks for photo alignment; physical sizing inches on SVG; prepare-cover endpoint (300DPI) and frontend to download correctly sized cover; update size labels (~12in and ~5in tall)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -341,7 +341,7 @@
                         <input type="radio" name="modal-plaque-size" value="large" checked style="accent-color: var(--blue-500);">
                         <div>
                             <div style="font-weight: 600; font-size: 1.1rem;">Large Plaque</div>
-                            <div style="color: var(--slate-500); font-size: 0.9rem;">8.5" x 11" - Perfect for wall display</div>
+                            <div style="color: var(--slate-500); font-size: 0.9rem;">~12" tall (≈8" wide) - Wall display</div>
                             <div style="font-weight: 600; color: var(--blue-600); margin-top: 0.5rem;">$39.99</div>
                         </div>
                     </label>
@@ -349,7 +349,7 @@
                         <input type="radio" name="modal-plaque-size" value="small" style="accent-color: var(--blue-500);">
                         <div>
                             <div style="font-weight: 600; font-size: 1.1rem;">Small Plaque</div>
-                            <div style="color: var(--slate-500); font-size: 0.9rem;">4" x 6" - Perfect for desk or shelf</div>
+                            <div style="color: var(--slate-500); font-size: 0.9rem;">~5" tall (≈3.4" wide) - Desk or shelf</div>
                             <div style="font-weight: 600; color: var(--blue-600); margin-top: 0.5rem;">$29.99</div>
                         </div>
                     </label>
@@ -531,7 +531,7 @@
                     <div class="cart-item-info">
                         <h4>${item.meta.title}</h4>
                         <p>${item.meta.artist}</p>
-                        <p>Size: ${item.size === 'large' ? 'Large (8.5" x 11")' : 'Small (4" x 6")'}</p>
+                        <p>Size: ${item.size === 'large' ? 'Large (~12" tall)' : 'Small (~5" tall)'}</p>
                         <p>Time: ${formatTime(item.progress)}</p>
                         <p style="font-weight: 600; color: var(--blue-600);">$${item.price.toFixed(2)}</p>
                     </div>
@@ -608,9 +608,14 @@
                 const [svg, imageBlob] = await Promise.all([
                     fetchAPI('generate-plaque', {
                         query: item.query,
-                        progressTime: formatTime(item.progress)
+                        progressTime: formatTime(item.progress),
+                        options: { plaqueHeightInch: item.size === 'large' ? 12 : 5, omitAlbum: true }
                     }).then(res => new Blob([res], { type: 'image/svg+xml' })),
-                    fetch(item.meta.image).then(res => res.blob())
+                    fetch(`${API_BASE}/prepare-cover`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ imageUrl: item.meta.image, size: item.size })
+                    }).then(async r => { if(!r.ok){ throw new Error(await r.text()); } return r.blob(); })
                 ]);
 
                 // Use JSZip to create a zip file
